script for next benchmark attempt